--- a/languages/kaku.pot
+++ b/languages/kaku.pot
@@ -451,7 +451,7 @@ msgid "Instagram URL"
 msgstr ""
 
 #: customizer/kaku-customizer-settings/page-customizer/about/c-about-page.php:3
-msgid "Kaku pages"
+msgid "Kaku Pages"
 msgstr ""
 
 #: customizer/kaku-customizer-settings/page-customizer/about/c-about-page.php:9
